force-app/main/default/objects/CPM_Async_Event__e/CPM_Async_Event__e.object-meta.xml
<CustomObject>
    <label>CPM Async Event</label>
    <pluralLabel>CPM Async Events</pluralLabel>
</CustomObject>