force-app/main/default/objects/CPM_Async_Event__e/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>