force-app/main/default/objects/CPM_Async_Event__e/fields/ApexClass_Name__c.field-meta.xml
<CustomField>
    <fullName>ApexClass_Name__c</fullName>
    <label>ApexClass Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>