force-app/main/default/objects/CPM_Async_Event__e/fields/AsyncApexJob_Name__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJob_Name__c</fullName>
    <label>AsyncApexJob Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>