force-app/main/default/objects/CPM_Async_Event__e/fields/AsyncApexJob_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJob_Parent_Id__c</fullName>
    <label>AsyncApexJob Parent Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>