force-app/main/default/objects/CPM_Async_Event__e/fields/AsyncApexJob_Status__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJob_Status__c</fullName>
    <description>Queued, Processing, Completed, Completed with Warnings, Completed with Errors, Failed</description>
    <label>AsyncApexJob Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>