force-app/main/default/objects/CPM_Async_Event__e/fields/Current_Job_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Stage__c</fullName>
    <description>Queued, Processing, Completed, Completed with Warnings, Completed with Errors, Failed</description>
    <label>Current Async Job Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>