force-app/main/default/objects/CPM_Async_Event__e/fields/Demo_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Demo_Component_Id__c</fullName>
    <label>Demo Component Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>