force-app/main/default/objects/CPM_Async_Event__e/fields/Demo_Component_Title__c.field-meta.xml
<CustomField>
    <fullName>Demo_Component_Title__c</fullName>
    <label>Demo Component Title</label>
    <length>55</length>
    <type>Text</type>
</CustomField>