force-app/main/default/objects/CPM_Async_Event__e/fields/Event_Level__c.field-meta.xml
<CustomField>
    <fullName>Event_Level__c</fullName>
    <description>Success, Error, Warning, Info</description><externalId>false</externalId>
    <label>Job Status Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>