force-app/main/default/objects/CPM_Async_Event__e/fields/Event_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Event_Status_Message__c</fullName>
    <description>Short longer of the current job status. "Job completed with 1 warning"</description>
    <label>Async Job Event Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>