force-app/main/default/objects/CPM_Async_Event__e/fields/Event_Status_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Status_Title__c</fullName>
    <description>Short description of the current job status. "Job Completed"</description>
    <label>Async Job Event Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>