force-app/main/default/objects/CPM_Async_Event__e/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Async Job Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>