force-app/main/default/objects/CPM_Async_Event__e/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Async Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>