force-app/main/default/objects/CPM_Async_Event__e/fields/Job_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Parent_Id__c</fullName>
    <label>Async Job Parent Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>