force-app/main/default/objects/CPM_Async_Event__e/fields/Send_Toast__c.field-meta.xml
<CustomField>
    <fullName>Send_Toast__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send toast to UI</description>
    <label>Send_Toast</label>
    <type>Checkbox</type>
</CustomField>