force-app/main/default/objects/CPM_Async_Event__e/fields/Toast_Message__c.field-meta.xml
<CustomField>
    <fullName>Toast_Message__c</fullName>
    <description>(Required) A string representing the body of the message. It can contain placeholders in the form of {0} ... {N}. The placeholders are replaced with the links on messageData.</description>
    <label>Toast Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>