force-app/main/default/objects/CPM_Async_Event__e/fields/Toast_Mode__c.field-meta.xml
<CustomField>
    <fullName>Toast_Mode__c</fullName>
    <description>Determines how persistent the toast is. Valid values are: dismissable (default), remains visible until you click the close button or 3 seconds has elapsed, whichever comes first; pester, remains visible for 3 seconds and disappears automatically. No close button is provided; sticky, remains visible until you click the close button.</description>
    <label>Toast Mode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>