force-app/main/default/objects/CPM_Async_Event__e/fields/Toast_Title__c.field-meta.xml
<CustomField>
    <fullName>Toast_Title__c</fullName>
    <label>Toast Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>