force-app/main/default/objects/CPM_Async_Event__e/fields/Toast_Variant__c.field-meta.xml
<CustomField>
    <fullName>Toast_Variant__c</fullName>
    <description>Changes the appearance of the notice. Toasts inherit styling from toasts in the Lightning Design System. Valid values are: info (default), success, warning, and error.</description>
    <label>Toast Variant</label>
    <length>55</length>
    <type>Text</type>
</CustomField>